assets/the4-custom.css
/* ... */
.transparent-header.hdt-header-tranparent-true {

  .hdt-main-header-content,
  #hdt-nav-ul>li>.hdt-menu-link,
  #hdt-nav-ul>li details>.hdt-menu-link,
  .hdt-site-top_nav .hdt-site-nav_icon a {
    color: #fff;
  }

  .hdt-menu-bar .hdt-hamburger-box .hdt-hamburger-inner {
    background-color: #fff;
  }
}

/*
.transparent-header.hdt-header-tranparent-false {

  .hdt-main-header-content,
  #hdt-nav-ul>li>.hdt-menu-link,
  #hdt-nav-ul>li details>.hdt-menu-link,
  .hdt-site-top_nav .hdt-site-nav_icon a {
    color: rgb(var(--color-foreground2));
  }

  .hdt-menu-bar .hdt-hamburger-box .hdt-hamburger-inner {
    background-color: #000;
  }
}
*/

#hdt-nav-ul>li>.hdt-menu-link,
#hdt-nav-ul>li details>.hdt-menu-link,
.hdt-site-top_nav .hdt-site-nav_icon a {
  color: rgb(var(--color-foreground2));
}

#hdt-nav-ul>li>.hdt-menu-link:hover,
#hdt-nav-ul>li details>.hdt-menu-link:hover {
  color: #000;
}

.hdt-site-top_nav .hdt-site-nav_icon a:hover {
  color: rgb(var(--color-foreground));
}

.hdt-section-header.scrolled-past-header.shopify-section-header-sticky {

  .hdt-main-header-content,
  #hdt-nav-ul>li>.hdt-menu-link,
  #hdt-nav-ul>li details>.hdt-menu-link,
  .hdt-site-top_nav .hdt-site-nav_icon a {
    color: rgb(var(--color-foreground2));
  }

  .hdt-main-header-content:hover,
  #hdt-nav-ul>li>.hdt-menu-link:hover,
  #hdt-nav-ul>li details>.hdt-menu-link:hover {
    color: #000000;
  }

  .hdt-site-top_nav .hdt-site-nav_icon a:hover {
    color: rgb(var(--color-foreground));
  }

  .hdt-menu-bar .hdt-hamburger-box .hdt-hamburger-inner {
    background-color: #000000;
  }
}

#hdt-nav-ul>li>.hdt-menu-link>.hdt-menu-link-text,
#hdt-nav-ul>li details>.hdt-menu-link>.hdt-menu-link-text {
  margin-top: 10px;
  letter-spacing: normal;
}

/*
#hdt-nav-ul>li>.hdt-menu-link>.hdt-menu-link-text>span,
#hdt-nav-ul>li details>.hdt-menu-link>.hdt-menu-link-text>span {
  position: relative;
}

#hdt-nav-ul>li>.hdt-menu-link>.hdt-menu-link-text>span::after,
#hdt-nav-ul>li details>.hdt-menu-link>.hdt-menu-link-text>span::after {
  content: "";
  position: absolute;
  left: 0;
  right: 0;
  bottom: 19px;
  height: 1px;
  background-color: currentColor;
  opacity: 0;
  transform: scaleX(0);
  transform-origin: center;
  transition: opacity 0s ease, transform .5s ease;
}

#hdt-nav-ul>li:hover>.hdt-menu-link>.hdt-menu-link-text>span::after,
#hdt-nav-ul>li details:hover>.hdt-menu-link>.hdt-menu-link-text>span::after,
#hdt-nav-ul>li>.hdt-menu-link.hdt-menu-link--active>.hdt-menu-link-text>span::after {
  opacity: 0.8;
  transform: scaleX(1);
}
*/

#hdt-nav-ul>li>.hdt-menu-link>.hdt-menu-link-text,
#hdt-nav-ul>li details>.hdt-menu-link>.hdt-menu-link-text {
  position: relative;
}

#hdt-nav-ul>li>.hdt-menu-link>.hdt-menu-link-text::after,
#hdt-nav-ul>li details>.hdt-menu-link>.hdt-menu-link-text::after {
  content: "";
  position: absolute;
  left: 0;
  right: 0;
  bottom: -1px;
  height: 1.5px;
  background-color: currentColor;
  opacity: 0;
  transform: scaleX(0);
  transform-origin: center;
  transition: opacity 0s ease, transform .5s ease;
}

#hdt-nav-ul>li:hover>.hdt-menu-link>.hdt-menu-link-text::after,
#hdt-nav-ul>li details:hover>.hdt-menu-link>.hdt-menu-link-text::after,
#hdt-nav-ul>li>.hdt-menu-link.hdt-menu-link--active>.hdt-menu-link-text::after {
  opacity: 0.8;
  transform: scaleX(1);
}


/*Logo*/
.hdt-logo {
  color: rgb(var(--color-foreground));
}

.hdt-logo>a {
  animation-duration: .25s;
  display: block;
  font-size: 40px;
  height: 40px;
  line-height: 40px;
  margin: auto 0;
  overflow: hidden;
  text-decoration: none;
  text-indent: 100%;
  white-space: nowrap;
}

/*
.hdt-logo>a::before {
  speak: none;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: inherit;
  content: "\e950";
  display: block;
  font-family: icomoon !important;
  font-size: inherit;
  font-style: normal;
  font-variant: normal;
  font-weight: 400;
  text-indent: 0;
  text-transform: none;
}
*/

.hdt-logo [aria-hidden=true] {
  display: none;
}

@media(max-width: 1149px) {
  .hdt-logo {
    display: none;
    font-size: 50px;
  }
}

/*
@media(min-width: 1150px) {
  .hdt-header-logo_left .hdt-logo {
    margin-left: -8px;
  }
}
*/

/*Icons*/
.hdt-site-top_nav {
  gap: 0;
  /* margin-right: -11px; */
}

.hdt-site-top_nav .hdt-site-nav_icon a {
  line-height: 1;
  font-size: 20px;
  position: relative;
  padding: 11px;
}

.hdt-site-top_nav .hdt-site-nav_search a::before {
  speak: none;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: inherit;
  content: "";
  display: block;
  font-family: icomoon !important;
  font-size: 18px;
  font-style: normal;
  font-variant: normal;
  font-weight: 400;
  text-indent: 0;
  text-transform: none;
}

.hdt-site-top_nav .hdt-site-nav_cart a::before {
  speak: none;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: inherit;
  content: "";
  display: block;
  font-family: icomoon !important;
  font-size: 18px;
  font-style: normal;
  font-variant: normal;
  font-weight: 400;
  text-indent: 0;
  text-transform: none;
}

@media(max-width: 1149px) {
  .hdt-site-top_nav .hdt-site-nav_cart a::before {
    font-size: 22px;
  }
}

.hdt-site-top_nav .hdt-site-nav_cart hdt-cart-count {
  color: inherit;
  font-size: 9px;
  padding-top: 18px;
  left: 0;
  line-height: 1;
  position: absolute;
  right: 0;
  text-align: center;
  text-indent: 0;
  top: 0;
}

.hdt-site-top_nav .hdt-site-nav_wishlist :is(a.icon-heart, a button)::before {
  speak: none;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: inherit;
  content: "";
  display: block;
  font-family: icomoon !important;
  font-size: 18px;
  font-style: normal;
  font-variant: normal;
  font-weight: 400;
  text-indent: 0;
  text-transform: none;
}
/* ... */

